--- a/Laboratorio_Clustering.ipynb
+++ b/Laboratorio_Clustering.ipynb
@@ -19,7 +19,10 @@
     "# Instrucciones\n",
     "\n",
     "El laboratorio tiene 6ptos, donde obtener 6 ptos equivale a un 7.0 y 0 ptos a un 1.0. El formato de entrega será subir a u-cursos un **único** jupyter notebook por grupo.\n",
-    "El notebook debe ejecutar desde la primera celda a la última **sin errores**. Todo el código debe estar en el mismo notebook. El código debe estar en un formato **presentable** y **ejecutado**."
+    "El notebook debe ejecutar desde la primera celda a la última **sin errores**. Todo el código debe estar en el mismo notebook. El código debe estar en un formato **presentable** y **ejecutado**.\n",
+    "\n",
+    "\n",
+    "**Nota:** Se descontará puntaje si adjunta gráficos sin descripción. Para esto puede añadir una descripción en los atributos xlabel, ylabel y título; o añadir una celda markdown debajo del gráfico de la forma \"**Figura x:** descripción detallada...\"."
    ]
   },
   {
