--- a/Laboratorio_Clustering.ipynb
+++ b/Laboratorio_Clustering.ipynb
@@ -251,7 +251,7 @@
    "source": [
     "## B.1 K-means: Encontrar el número \"óptimo\" de clusters. (1 pto)\n",
     "\n",
-    "Utilice el algoritmo K-Means para diferentes números de clusters ($K$), en particular, para $K\\in {2, \\ldots, 10}$. Luego, en base a alguna métrica encuentre el número **\"adecuado\"** de clusters (**$K^{*}$**).\n",
+    "Utilice el algoritmo K-Means para diferentes números de clusters ($K$), en particular, para $K\\in \\{2, \\ldots, 10\\}$. Luego, en base a alguna métrica encuentre el número **\"adecuado\"** de clusters (**$K^{*}$**).\n",
     "\n",
     "**Nota:** Debe justificar la elección de la métrica, sino se dará **0 ptos**."
    ]
